payent form details overlap fix

--- a/south-wenatchee/src/app/api-bundle/auto-pay/auto-pay.component.scss
+++ b/south-wenatchee/src/app/api-bundle/auto-pay/auto-pay.component.scss
@@ -30,7 +30,7 @@ table {
 
 .modal-position {
   position: absolute;
-  left: 260px;
+  left: 280px;
 }
 
 .modal {
@@ -132,7 +132,7 @@ table {
   }
 
   .modal-position {
-    left: 240px;
+    left: 280px;
   }
 }
 
