--- a/south-wenatchee/src/app/api-bundle/pay-rent-form/pay-rent-form.component.scss
+++ b/south-wenatchee/src/app/api-bundle/pay-rent-form/pay-rent-form.component.scss
@@ -16,7 +16,7 @@
 
 .modal-position {
   position: absolute;
-  left: 225px;
+  left: 280px;
 }
 
 table {
@@ -125,7 +125,7 @@ table {
   }
 
   .modal-position {
-    left: 240px;
+    left: 280px;
   }
 }
 
